<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/windowBackground"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <android.support.v7.widget.CardView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                card_view:cardElevation="4dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="4dp"
                card_view:cardBackgroundColor="#FFF"
                android:background="?attr/selectableItemBackground"
                card_view:cardCornerRadius="2dp"
                android:id="@+id/last_card" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/location_head_last"
                        android:layout_gravity="center"
                        android:layout_marginTop="16dp"
                        android:textSize="20sp"
                        android:layout_weight="0.5" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/location_txt_last"
                        android:layout_gravity="center"
                        android:layout_marginTop="16dp"
                        android:textSize="25sp"
                        android:id="@+id/loc_detail"
                        android:layout_weight="0.5" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/error_address"
                        android:layout_gravity="center"
                        android:layout_marginTop="16dp"
                        android:textSize="16sp"
                        android:id="@+id/address_det"
                        android:layout_marginBottom="16dp"
                        android:layout_weight="0.5" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/on_txt"
                        android:layout_gravity="center"
                        android:textSize="20sp"
                        android:layout_marginBottom="16dp"
                        android:layout_weight="0.5" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/error_date"
                        android:layout_gravity="center"
                        android:textSize="20sp"
                        android:id="@+id/date_det"
                        android:layout_marginBottom="16dp"
                        android:layout_weight="0.5" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <Button
                            android:layout_width="fill_parent"
                            android:layout_height="48dp"
                            android:id="@+id/map_details"
                            android:text="OPEN MAP"
                            android:background="@color/colorPrimary"
                            android:textColor="@color/textColorPrimary"
                            android:layout_weight="0.5"
                            />

                        <Button
                            android:layout_width="fill_parent"
                            android:layout_height="48dp"
                            android:id="@+id/nav_details"
                            android:text="NAVIGATE HERE"
                            android:background="@color/colorPrimary"
                            android:textColor="@color/textColorPrimary"
                            android:layout_weight="0.5"
                            />


                    </LinearLayout>


                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>

    </ScrollView>



</RelativeLayout>
